# University

./: README.md  homework_02_B242.ipynb
8-puzzle-sat-solver/: 8-puzzle-sat-solver.ipynb  README.md
Autonomous-Robot TCP Server/: klient.cpp  server.cpp
Multiprocessing Semestral Work/: Makefile  Multiprocessing Semestral Work.cpp
dimensionality_reduction_binary_classification/: README.md  dimensionality_reduction_binary_classification.ipynb  results.csv
grid_tsp_lp/: README.md  grid_tsp_lp.ipynb
huffman_code_entropy/: README.md  huffman_code_entropy.ipynb
lambda-evaluator/: README.md  examples  semestralka.rkt
minipascal-llvm-compiler/: CMakeLists.txt  README.md
minipascal-llvm-compiler/Testing/: arr.txt  testInput.txt  testInputSecond.txt  testInputThird.txt
minipascal-llvm-compiler/src/: Lexer.cpp  Lexer.hpp  Makefile  Parser.cpp  Parser.hpp  ast.cpp  ast.hpp  ast_gen.cpp  main.cpp
neural_networks/: README.md
preprocessing_decision_tree_knn/: README.md  homework_01.ipynb  result.csv
random_forest_regression/: README.md  homework_02.ipynb  results.csv
sam-fulltext-index/: README.md  experiments.ipynb
sam-fulltext-index/cpp/: Makefile
sam-fulltext-index/python/: LCF.py  SAM.py
terminal-based spreadsheet editor/: Doxyfile  Makefile  README.md  prohlaseni.txt  zadani.txt
terminal-based spreadsheet editor/examples/: TestCycleDetection.txt  TestInputAssign.txt  TestInts.txt  TestString.txt  TestWrongAssign.txt  TestWrongInts.txt  TestWrongString.txt  inputFile.txt  inputFileTwo.txt  loadAndSaveTest.txt  loadTestTwo.txt  resLoadAndSaveTest.txt  (+3 more)
(+82 files in other folders)
